--- a/src/components/FaceRecognition/FaceRecognition.css
+++ b/src/components/FaceRecognition/FaceRecognition.css
@@ -1,6 +1,6 @@
 .bounding-box {
 	position: absolute;
-	box-shadow: 0 0 0 3px #149df2 inset;
+	box-shadow: 0 0 0 .2em #149df2 inset;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
